Added introductory paragraphs.

--- a/paper/main/future_hail.Rnw
+++ b/paper/main/future_hail.Rnw
@@ -25,7 +25,7 @@
 \affil[6]{\orgname{Uncharted Waters Research}, \orgaddress{\city{Sydney}, \country{Australia}}}
 
 \abstract{Hailstorms cause significant damage across the globe, but changes to
-hailstorms in a warming climate are not well quantified. Here, we apply hail
+hailstorms in a warming climate are not well quantified. Here, we applied hail
 proxies to global model projections to quantify changes in the frequency of
 hail-prone conditions and the effects of those changes on 26 crop types. In
 projections with 2 \degr{} and 3 \degr{} of mean global warming, hail-prone
@@ -52,14 +52,20 @@ summer crops.}
 #results = fromJSON(file='../../results/results.json')
 @
 
-Hailstorms are a form of extreme weather that causes significant damage to physical assets including crops. Hail and the storms that produce it are expected to be affected by anthropogenic global warming, yet regional studies using observations or projections show geographical inhomogeneities and there remains high uncertainty on the details of any changes \cite{Raupach_NREE_2021}. Globally, hail observations are scarce \cite{Raupach_NREE_2021}, meaning global climatologies generally rely on satellite data \cite{Cecil_JC_2012,Bang_JAMC_2019} or examination of environmental conditions in reanalyses using hail proxies \cite{Prein_WCE_2018}. Here, we global projections of future hail hazard, using a hail proxies applied to model output from the Coupled Model Intercomparison Project (CMIP6) \cite{Eyring_GMD_2016} in a per-degree framework.
+Hailstorms are a form of extreme weather that causes significant damage to physical assets including crops. Hail and the storms that produce it are expected to be affected by anthropogenic global warming, yet regional studies using observations or projections show geographical inhomogeneities and there remains high uncertainty on the details of any changes \cite{Allen_2018, Brimelow_2018, Raupach_NREE_2021}. Globally, hail observations are scarce \cite{Raupach_NREE_2021}, meaning global climatologies generally rely on satellite data \cite{Cecil_JC_2012,Bang_JAMC_2019} or examination of environmental conditions in reanalyses using hail proxies \cite{Prein_WCE_2018}. Here, we produced global projections of future hail hazard using hail proxies applied to model output from the Coupled Model Intercomparison Project (CMIP6) \cite{Eyring_GMD_2016} in a per-degree framework.
+
+Because hailstorms are hard to observe and model given their small spatial size and relative rarity \cite{Raupach_NREE_2021}, proxies that detect hail-prone atmospheric conditions are often used in climatological studies. Hail proxies rely on detecting the atmospheric ``ingredients'' required for hail to form. Hailstones form by accretion of supercooled liquid water onto ice embryos suspended in the updraft of a thunderstorm, until they become too heavy to support, and fall while undergoing melt on their descent through warmer air \cite{Knight_2001, Fraile_AR_2003}. Hailstorm ingredients are usually considered to include, at a minimum, atmospheric instability, for a thunderstorm with strong updrafts that can support hail growth to form \cite{Brooks_AR_2003}, and vertical wind shear (horizontal wind differences by height) to ``organise'' the storm \cite{Brooks_AR_2013} and influence hailstone trajectories \cite{Dennis_JAS_2017, Lin_JAS_2022}. Instability--shear hail proxies are common \cite{Raupach_MWR_2023}. Proxies suffer from the ``initiation problem'' because storms rarely initiate even in storm-prone conditions \cite{Sherwood_MWR_1999, Tippett_CCCR_2015, Raupach_MWR_2023}.
+
+Climate change is expected to affect the ingredients for hailstorms and thus the frequency and severity of hailstorms themselves \cite{Raupach_NREE_2021}. A thermodynamic expectation is of three offsetting effects: first, increased instability owing to a larger saturation deficit in a warmer atmosphere \cite{Seeley_GRL_2015} leading to more storm initiation and stronger updrafts that could support larger hailstones; second, increased melting of hailstones owing to a warmer troposphere \cite{Prein_NCC_2020}, thus leading to a reduction (or elimination \cite{Mahoney_NCC_2012}) of surface hail frequency; and third, an overall decrease in vertical wind shear \cite{Brooks_AR_2013} that is generally outweighed by changes in instability \todo{refs} or may not apply locally \cite{Diffenbaugh_PNAS_2013, Radler_npjCAS_2019}. The broad thermodynamic expectation is thus of a reduction in surface hail frequency combined with an increase in severity when hail does reach the Earth's surface \cite{Raupach_NREE_2021}. However, regional studies show large geographical heterogeneity in signals for hail frequency, owing in part to offsetting in these climate change effects and in part to dynamical changes meaning that ingredient changes are not spatially uniform, while hail severity is generally expected to increase \cite{Raupach_NREE_2021}.
+
+Here, we applied four hail proxies to an ensemble of eight global projections from CMIP6, to examine future projections of the frequency of hail-prone conditions globally. We investigated the effects of projected changes on hail-prone proportions of crop growing seasons for 26 different crops. We used a per-degree framework \cite{Lepore_EF_2021} for simpler comparisons between models. For details of the simulations and proxies used, refer to ``Online methods'' and the supplementary information. Our work shows how hailstorm frequency is projected to decrease in warm environments but increase in cooler environments in future, driven primarily by changes in convective instability. The changes are projected to increase the risk of hail occurrence for winter crops while decreasing occurrence risk in summer. \todo{Include local changes.}
 
 \section*{Results}
 \label{sec:results}
 
 \subsection*{Comparison to ERA5 for historical period}
 
-Figure \ref{fig:cmip_era_comparison} shows a comparison between the multimodel, multi-proxy mean of annual hail-prone days for the CMIP6 models, and the multi-proxy mean of annual hail-prone days for the ERA5 reanalyses. While the results for individual CMIP6 models show a wide spread of absolute values (Supplementary Figure \ref{SM-fig:historical_annual_means}), the locations of hail hotspots match well between reanalysis and models. The models MPI-ESM1-2-HR and EC-Earth show similar numbers of hail-prone days to ERA5, while MIROC6, CMCC-CM2-SR5, and CMCC-ESM2 show moderately more and CNRM-CM6-1 and GISS-E2-1-G show significantly more hail activity than ERA5. There are also differences across the selected hail proxies, with the Significant Hail Parameter (SHIP) \cite{SPC_SHIP} producing the least hail-prone days and the proxy of Raupach et al. 2023 without extra conditions \cite{Raupach_MWR_2023} producing the greatest number of hail-prone days. Given the geographical agreement but differences in absolute numbers of hail-prone days, we consider relative changes per model in the rest of our analyses. 
+Figure \ref{fig:cmip_era_comparison} shows a comparison between the multimodel, multi-proxy mean of annual hail-prone days for the CMIP6 models, and the multi-proxy mean of annual hail-prone days for the ERA5 reanalyses. While the results for individual CMIP6 models show a wide spread of absolute values (Supplementary Figure \ref{SM-fig:historical_annual_means}), the locations of hail hotspots match well between reanalysis and models. The models MPI-ESM1-2-HR and EC-Earth show similar numbers of hail-prone days to ERA5, while MIROC6, CMCC-CM2-SR5, and CMCC-ESM2 show moderately more and CNRM-CM6-1 and GISS-E2-1-G show significantly more hail-prone days than ERA5. There are also differences across the selected hail proxies, with the Significant Hail Parameter (SHIP) \cite{SPC_SHIP} producing the fewest hail-prone days and the proxy of Raupach et al. 2023 without extra conditions \cite{Raupach_MWR_2023} producing the greatest number of hail-prone days. Given there is geographical agreement but differences in absolute numbers of hail-prone days, we consider relative changes per model in the rest of our analyses.
 
 \begin{figure*}[h!]
     \includegraphics[width=\textwidth]{../../results/main/CMIP6_ERA5_comparison_historical}
@@ -69,11 +75,11 @@ Figure \ref{fig:cmip_era_comparison} shows a comparison between the multimodel, 
 
 \subsection*{Case study of hail-prone day anomalies}
 
-Monthly anomalies, derived using ERA5 reanalysis data, in proxy-derived hail-prone days show higher values for months with known high occurrences of damaging hailstorms. The proxy produced higher than average numbers of hail-prone days for February 2015 in northern and central India (Supplementary Figure \ref{SM-fig:anoms_India_2015}), regions that were affected by hailstorms that caused major losses to wheat crops at this time \citep{Singh_CS_2017}. Similarly, the proxy highlights areas of central and southern Europe as particularly hail-prone in June 2022 (Supplementary Figure \ref{SM-fig:anoms_Europe_2022}), when the passage of two low-pressure systems caused hailstorm outbreaks across these regions \citep{Pucik_2023} that broke records for insured losses in France \citep{Soyka_2023}. The proxy also identified April 2015 and October 2022 as unusually hail-prone months in northeast India and western France, respectively; there were reported hailstorms in both regions during the respective months \cite{Chattopadhyay_Mausam_2017, Pucik_2023}. These case-study results increase our confidence in the ability of the hail proxies, which were trained using data from Australia \citep{Raupach_MWR_2023}, Italy \citep{Eccel_IJC_2012}, and the United States \citep{SPC_SHIP} \todo{check} to identify hail-prone conditions worldwide.
+Monthly anomalies, derived using ERA5 reanalysis data, in proxy-derived hail-prone days show higher values for months with known high occurrences of damaging hailstorms. The proxy produced higher than average numbers of hail-prone days for February 2015 in northern and central India (Supplementary Figure \ref{SM-fig:anoms_India_2015}), regions that were affected by hailstorms that caused major losses to wheat crops at this time \citep{Singh_CS_2017}. Similarly, the proxy highlights areas of central and southern Europe as particularly hail-prone in June 2022 (Supplementary Figure \ref{SM-fig:anoms_Europe_2022}), when the passage of two low-pressure systems caused hailstorm outbreaks across these regions \citep{Pucik_2023} that broke records for insured losses in France \citep{Soyka_2023}. The proxy also identified April 2015 and October 2022 as unusually hail-prone months in northeast India and western France, respectively; there were reported hailstorms in both regions during the respective months \cite{Chattopadhyay_Mausam_2017, Pucik_2023}. These case-study results increase our confidence in the ability of the hail proxies, which were trained using data from Australia \citep{Raupach_MWR_2023}, Italy \citep{Eccel_IJC_2012}, and the United States \citep{SPC_SHIP} to identify hail-prone conditions worldwide.
 
 \subsection*{Changes in hail-prone days with warming}
 
-Figure \ref{fig:future_changes_hail_days} shows multimodel, multi-proxy mean changes in annual hail-prone days for 2 \degr{} and 3 \degr{} warming, respectively. Multimodel, multi-proxy mean changes are shown as relative differences zoomed to selected land areas in Figures \ref{fig:future_changes_regional_1} and \ref{fig:future_changes_regional_2}. There is an overall poleward shift of hail-prone conditions.
+Figure \ref{fig:future_changes_hail_days} shows multimodel, multi-proxy mean changes in annual hail-prone days for 2 \degr{} and 3 \degr{} of global warming, respectively. Multimodel, multi-proxy mean changes are shown as relative differences zoomed to selected land areas in Figures \ref{fig:future_changes_regional_1} and \ref{fig:future_changes_regional_2}. There is an overall poleward shift of hail-prone conditions.
 
 \begin{itemize}
 \item \todo{Incorporate supplementary figures.} Differences per model and proxy are shown in Supplementary Figures \ref{SM-fig:hail_diffs_2C} and \ref{SM-fig:hail_diffs_3C}. Multimodel, multi-proxy mean differences by season are shown in Supplementary Figure \ref{SM-fig:hail_changes_by_season}.
