--- a/paper/main/library.bib
+++ b/paper/main/library.bib
@@ -970,3 +970,26 @@
   doi          = {10.5281/zenodo.12168002},
   url          = {https://doi.org/10.5281/zenodo.12168002}
 }
+
+@inbook{Allen_2018,
+   author = {Allen, John T.},
+   title = {Climate Change and Severe Thunderstorms},
+   booktitle = {Oxford Research Encyclopedia of Climate Science},
+   publisher = {Oxford Univ. Press},
+   pages = {67},
+   DOI = {10.1093/acrefore/9780190228620.013.62},
+   url = {https://oxfordre.com/climatescience/view/10.1093/acrefore/9780190228620.001.0001/acrefore-9780190228620-e-62},
+   year = {2018},
+   type = {Book Section}
+}
+
+@inbook{Brimelow_2018,
+   author = {Brimelow, Julian},
+   title = {Hail and Hailstorms},
+   booktitle = {Oxford Research Encyclopedia of Climate Science},
+   publisher = {Oxford Univ. Press},
+   DOI = {10.1093/acrefore/9780190228620.013.666},
+   url = {https://oxfordre.com/climatescience/view/10.1093/acrefore/9780190228620.001.0001/acrefore-9780190228620-e-666},
+   year = {2018},
+   type = {Book Section}
+}
