--- a/paper/main/library.bib
+++ b/paper/main/library.bib
@@ -991,5 +991,6 @@
    DOI = {10.1093/acrefore/9780190228620.013.666},
    url = {https://oxfordre.com/climatescience/view/10.1093/acrefore/9780190228620.001.0001/acrefore-9780190228620-e-666},
    year = {2018},
-   type = {Book Section}
+   type = {Book Section},
+   pages = 58
 }
